@@ -94,12 +94,6 @@ PATCHES TO BACKPORT FROM TRUNK:
     identify exactly what the proposed changes are! ]
   [ please append new backports at the end of this list not the top. ]
 
-    *) core_input_filter: Fix leak of a brigade by moving buckets to an 
-       existing brigade instead of calling brigade_split which creates a 
-       new brigade. PR 33382. r154200
-       Patch for 2.0: http://www.apache.org/~pquerna/c-i-f-leak.patch
-       +1: pquerna, trawick, jerenkrantz
-
     *) mod_ssl: Set r->user from SSLUsername earlier so that it's
        actually useful.
        http://svn.apache.org/viewcvs.cgi?rev=153280&view=rev
