@@ -1100,6 +1100,7 @@ typedef struct core_output_filter_ctx {
  
 typedef struct core_filter_ctx {
     apr_bucket_brigade *b;
+    apr_bucket_brigade *tmpbb;
 } core_ctx_t;
  
 typedef struct core_net_rec {
